fix multicol spacing

--- a/assets/section-multicolumn.css
+++ b/assets/section-multicolumn.css
@@ -214,10 +214,10 @@
 }
 
 @media screen and (min-width: 750px) {
-  .background-none .multicolumn-card__image-wrapper {
+/*   .background-none .multicolumn-card__image-wrapper {
     margin-left: 1.5rem;
     margin-right: 1.5rem;
-  }
+  } */
 
   .background-none .multicolumn-list .multicolumn-card__info,
   .background-none
